Made a lot of Architectural changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+# ALL THIS PROPERTIES MIGHT APPEAR AS UNUSED BUT THEY ARE NOT! This is because you use an IDE which do not check the
+# Spring dependencies.
+
+# Logging configuration (slf4j and Logback)
 logging.level.org.springframework.web: INFO
 logging.level.org.hibernate: ERROR
 logging.level.de.pandigo: DEBUG
 
-# mandatory configuration
+# JSON Doc Mandatory configuration
 jsondoc.version=1.0
 jsondoc.basePath=http://localhost:8080/carManager
 jsondoc.packages[0]=de.pandigo
