--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <java.version>1.8</java.version>
 
         <!-- The main class to start by executing java -jar -->
-        <start-class>de.pandigo.MainApplication</start-class>
+        <start-class>de.pandigo.cars.MainApplication</start-class>
 
         <!-- Versions -->
         <junit-version>4.11</junit-version>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>${junit-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
