--- a/pom.xml
+++ b/pom.xml
@@ -28,16 +28,16 @@
         <start-class>de.pandigo.cars.MainApplication</start-class>
 
         <!-- Versions -->
-        <junit-version>4.11</junit-version>
         <spring-boot-version>1.5.2.RELEASE</spring-boot-version>
         <jsondoc.version>1.2.16</jsondoc.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
